--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-multi-carousel": "^2.8.5",
-    "react-reveal": "^1.2.2"
+    "react-icons": "^5.1.0",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
